--- a/pagina1.html
+++ b/pagina1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Pagina 1</title>
     <link rel="stylesheet" href="diseño.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -11,14 +11,14 @@
     <div class="container text-center mt-3">
         <table class="table table-bordered">
             <tr>
-                <td><a href="pagina1.html" class="btn btn-primary">Página 1</a></td>
+                <td id="cambio"><a href="pagina1.html" class="btn btn-primary">Página 1</a></td>
                 <td><a href="pagina2.html" class="btn btn-primary">Página 2</a></td>
                 <td><a href="pagina3.html" class="btn btn-primary">Página 3</a></td>
-                <td id="cambio"><a href="index.html" class="btn btn-primary">index</a></td>
+                <td><a href="index.html" class="btn btn-primary">index</a></td>
             </tr>
         </table>
-        <h1>Recien vi doctor House y es una serie muy  infravalorada, simplemente Good.</h1>
-        <img src="img/house.jpg" alt="doctor" class="img-fluid">
+        <h1>Actualmente estoy viendo White Collar, de momento esta interesante.</h1>
+        <img src="img/collar.jpg" alt="consultor" class="img-fluid">
     </div>
 </body>
 </html>
