Agregue mi matricula y edite el index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </table>
         <h1>Recien vi doctor House y es una serie muy  infravalorada, simplemente Good.</h1>
         <img src="img/house.jpg" alt="doctor" class="img-fluid">
+        <p>Hola soy chuchin -Fabian</p>
     </div>
 </body>
 </html>
