--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </table>
         <h1>Recien vi doctor House y es una serie muy  infravalorada, simplemente Good.</h1>
         <img src="img/house.jpg" alt="doctor" class="img-fluid">
+	<label>Mi compañero David Chávez, piensa que Doctor House no es tan buena</label>
     </div>
 </body>
 </html>
