Agregue mas informacion a las imagenes, mucho mas. Tambien mas imagenes de las mismas.

--- a/pagina1.html
+++ b/pagina1.html
@@ -17,8 +17,13 @@
                 <td><a href="index.html" class="btn btn-primary">index</a></td>
             </tr>
         </table>
-        <h1>Actualmente estoy viendo White Collar, de momento esta interesante.</h1>
+        <h1>White Collar</h1>
         <img src="img/collar.jpg" alt="consultor" class="img-fluid">
+        <p>White Collar es una serie de televisión estadounidense que combina drama, crimen y comedia. La historia sigue a Neal Caffrey, un talentoso estafador y falsificador de arte, quien es capturado por el agente del FBI Peter Burke tras años de persecución. Sin embargo, en lugar de cumplir su sentencia en prisión, Neal logra negociar un trato para trabajar junto a Burke como consultor del FBI, ayudando a atrapar a otros criminales de cuello blanco utilizando su experiencia en fraudes, robos de arte y estafas financieras.</p>
+        <img src="/img/collar1.jpg" alt="criminal">
+        <p>A lo largo de seis temporadas, la relación entre Neal y Peter evoluciona de una simple alianza profesional a una amistad basada en la confianza y el respeto mutuo, aunque siempre con un trasfondo de dudas debido a la naturaleza escurridiza de Neal. La serie no solo se enfoca en la resolución de casos complejos, sino también en los intentos de Neal por recuperar su libertad y descubrir la verdad detrás de la desaparición de su amada Kate. Además, personajes como Mozzie, el excéntrico amigo y socio de Neal, aportan humor y astucia a la trama.</p>
+        <img src="/img/collar2.jpg" alt="fbi">
+        <p>El atractivo de White Collar radica en su combinación de inteligencia, sofisticación y emoción. Cada episodio presenta nuevos desafíos para el dúo protagonista, mientras Neal se debate entre su pasado criminal y la posibilidad de redención. La serie ofrece giros inesperados, personajes carismáticos y una ambientación elegante en Nueva York, lo que la convierte en una opción ideal para quienes disfrutan de historias de crimen con un toque de sofisticación y humor.</p>
     </div>
 </body>
 </html>
