cambio en la pantalla pagina3 y agregado el bloc de notas 2063648

--- a/pagina3.html
+++ b/pagina3.html
@@ -18,6 +18,7 @@
             </tr>
         </table>
         <h1>Breaking Bad</h1>
+        <p>God serie -Orlando</p>
         <img src="img/breaking.jpg" alt="bad" class="img-fluid">
         <p>Breaking Bad es una serie de televisión estadounidense que sigue la transformación de Walter White, un profesor de química de secundaria que, tras ser diagnosticado con cáncer de pulmón, decide fabricar y vender metanfetaminas para asegurar el futuro económico de su familia. Con la ayuda de su exalumno Jesse Pinkman, Walter se adentra en el peligroso mundo del narcotráfico, adoptando el alias de "Heisenberg" y dejando atrás su vida ordinaria para convertirse en un poderoso y temido criminal.</p>
         <img src="/img/breaking1.jpg" alt="breaking">
